fix zoom bar background color issue in dark mode

--- a/components/file_preview_modal/file_preview_modal.scss
+++ b/components/file_preview_modal/file_preview_modal.scss
@@ -1,5 +1,3 @@
-@import 'compass/css3';
-
 .file-preview-modal {
     padding-left: 0 !important;
 
@@ -53,7 +51,7 @@
 
     &__zoom-bar {
         .modal .modal-image & {
-            background-color: rgba(var(--center-channel-color-rgb), 0.56);
+            background-color: rgba(61, 60, 64, 0.56);
         }
     }
 }
